--- a/portfolio.html
+++ b/portfolio.html
@@ -220,18 +220,16 @@
                 </ul>
             </div>
             <div class="subscribe-email-input">
-                <form action="subscribe-form">
-                    <label for="subscribe-email" class="subscribe-text">Підпишіться на розсилку</label>
-                    <div class="subscribe-wrap">
-                        <input type="email" class="subscribe-input" name="subscribe-email" id="subscribe-email"
-                            placeholder="E-mail">
-                        <button type="submit" class="subscribe-button">
-                            <span class="button-text">Підписатися</span>
-                            <svg class="button-img" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#send"></use>
-                            </svg>
-                        </button>
-                    </div>
+                <p class="subscribe-text">Підпишіться на розсилку</p>
+                <form class="subscribe-form">
+                    <input type="email" class="subscribe-input" name="subscribe-email" id="subscribe-email"
+                        placeholder="E-mail">
+                    <button type="submit" class="subscribe-button">
+                        Підписатися
+                        <svg class="button-img" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#send"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </div>
