--- a/index.html
+++ b/index.html
@@ -389,17 +389,15 @@
                 </ul>
             </div>
             <div class="subscribe-email-input">
-                <form action="subscribe-form">
-                    <label for="subscribe-email" class="subscribe-text">Підпишіться на розсилку</label>
-                    <div class="subscribe-wrap">
-                        <input type="email" class="subscribe-input" name="subscribe-email" id="subscribe-email" placeholder="E-mail">
-                        <button type="submit" class="subscribe-button">
-                            <span class="button-text">Підписатися</span>
-                            <svg class="button-img" width="24" height="24">
-                                <use href="./images/symbol-defs.svg#send"></use>
-                            </svg>
-                        </button>
-                    </div>
+                <p class="subscribe-text">Підпишіться на розсилку</p>
+                <form class="subscribe-form">
+                    <input type="email" class="subscribe-input" name="subscribe-email" id="subscribe-email" placeholder="E-mail">
+                    <button type="submit" class="subscribe-button">
+                        Підписатися
+                        <svg class="button-img" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#send"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </div>
@@ -407,7 +405,7 @@
     <div class="backdrop is-hidden" data-modal >
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
-                <svg width="18" height="18">
+                <svg class="modal-close-icon" width="18" height="18">
                     <use href="./images/symbol-defs.svg#close-black"></use>
                 </svg>
             </button>
